# twitch-kodi-backend

./: .gitignore  Dockerfile  Makefile  README.md  build.json  pyproject.toml  settings.toml
tests/: test_twitch_fapi_backend.py
twitch_fapi_backend/: api.py  tasks.py  twitch.py
